# stl_parser

./: .gitignore  CMakeLists.txt
include/: stl_parser.h
resource/: input.STL
src/: main.cpp  stl_parser.cpp
